// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > patchReleaseComment > 200 > ok 1`] = `
{
  "release": {
    "message": "test",
  },
}
`;

exports[`routes > release > patchReleaseComment > audit > expected call 1`] = `
{
  "message": "test",
}
`;

exports[`routes > release > postReleaseComment > 200 > ok 1`] = `
{
  "release": {
    "message": "test",
  },
}
`;

exports[`routes > release > postReleaseComment > audit > expected call 1`] = `
{
  "message": "test",
}
`;
